--- a/app/index.html
+++ b/app/index.html
@@ -563,7 +563,7 @@
           <h3 class="title">
             DEAL OF THE DAY
           </h3>
-          <div class="promo__clock" data-time="'2022-10-20'">
+          <div class="promo__clock" data-time="'2022-12-20'">
             <div class="promo__clock-item">
               <span class="promo__days"></span>
               <div class="promo__text">Days</div>
@@ -626,9 +626,9 @@
               <img src="images/blog/1.jpg" alt="blog img">
             </a>
             <div class="blog__item-box">
-              <div class="blog__item-info">
-                <a class="blog__item-author" href="#">By Admin</a>
-                <a class="blog__item-date" href="#">January, 2020</a>
+              <div class="blog-box">
+                <a class="blog-box__author" href="#">By Admin</a>
+                <a class="blog-box__date" href="#">January, 2020</a>
               </div>
               <a class="blog__item-titlelink" href="#">
                 <h4 class="blog__item-title">
@@ -645,9 +645,9 @@
               <img src="images/blog/2.jpg" alt="blog img">
             </a>
             <div class="blog__item-box">
-              <div class="blog__item-info">
-                <a class="blog__item-author" href="#">By Admin</a>
-                <a class="blog__item-date" href="#">January, 2020</a>
+              <div class="blog-box">
+                <a class="blog-box__author" href="#">By Admin</a>
+                <a class="blog-box__date" href="#">January, 2020</a>
               </div>
               <a class="blog__item-titlelink" href="#">
                 <h4 class="blog__item-title">
@@ -664,9 +664,9 @@
               <img src="images/blog/3.jpg" alt="blog img">
             </a>
             <div class="blog__item-box">
-              <div class="blog__item-info">
-                <a class="blog__item-author" href="#">By Admin</a>
-                <a class="blog__item-date" href="#">January, 2020</a>
+              <div class="blog-box">
+                <a class="blog-box__author" href="#">By Admin</a>
+                <a class="blog-box__date" href="#">January, 2020</a>
               </div>
               <a class="blog__item-titlelink" href="#">
                 <h4 class="blog__item-title">
