--- a/app/shop.html
+++ b/app/shop.html
@@ -261,7 +261,7 @@
                   </span>
                 </label>
                 <label class="filter-popular__label">
-                  <input class="filter-popular__input" type="checkbox">
+                  <input class="filter-popular__input" type="checkbox" checked>
                   <span class="filter-popular__checkbox">
                     Man Accessories
                   </span>
