--- a/app/blog.html
+++ b/app/blog.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
   <link rel="stylesheet" href="css/blog.min.css" />
+  <link rel="stylesheet" href="css/style.min.css" />
 </head>
 
 <body>
@@ -17,6 +18,9 @@
         <img class="logo__img" src="images/logo.png" alt="logo" />
       </a>
       <nav class="menu">
+        <button class="menu__btn">
+          <span></span>
+        </button>
         <ul class="menu__list">
           <li class="menu__list-item ">
             <a class="menu__list-link menu__list-link--active" href="#"> Home </a>
@@ -99,7 +103,7 @@
                   </h4>
                   <div class="blog-box">
                     <a class="blog-box__author" href="#">By Admin</a>
-                    <a class="blog-box__date" href="#">January, 2020</a>
+                    <div class="blog-box__date" href="#">January, 2020</div>
                   </div>
                   <p class="blog-page__item-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -119,7 +123,7 @@
                   </h4>
                   <div class="blog-box">
                     <a class="blog-box__author" href="#">By Admin</a>
-                    <a class="blog-box__date" href="#">January, 2020</a>
+                    <div class="blog-box__date" href="#">January, 2020</div>
                   </div>
                   <p class="blog-page__item-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -141,7 +145,7 @@
                   </h4>
                   <div class="blog-box">
                     <a class="blog-box__author" href="#">By Admin</a>
-                    <a class="blog-box__date" href="#">January, 2020</a>
+                    <div class="blog-box__date" href="#">January, 2020</div>
                   </div>
                   <p class="blog-page__item-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -158,7 +162,7 @@
                   </h4>
                   <div class="blog-box">
                     <a class="blog-box__author" href="#">By Admin</a>
-                    <a class="blog-box__date" href="#">January, 2020</a>
+                    <div class="blog-box__date" href="#">January, 2020</div>
                   </div>
                   <p class="blog-page__item-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
