--- a/app/module/_blog/_blog.html
+++ b/app/module/_blog/_blog.html
@@ -15,7 +15,7 @@
         <div class="blog__item-box">
           <div class="blog-box">
             <a class="blog-box__author" href="#">By Admin</a>
-            <a class="blog-box__date" href="#">January, 2020</a>
+            <div class="blog-box__date">January, 2020</div>
           </div>
           <a class="blog__item-titlelink" href="#">
             <h4 class="blog__item-title">
@@ -34,7 +34,7 @@
         <div class="blog__item-box">
           <div class="blog-box">
             <a class="blog-box__author" href="#">By Admin</a>
-            <a class="blog-box__date" href="#">January, 2020</a>
+            <div class="blog-box__date">January, 2020</div>
           </div>
           <a class="blog__item-titlelink" href="#">
             <h4 class="blog__item-title">
@@ -53,7 +53,7 @@
         <div class="blog__item-box">
           <div class="blog-box">
             <a class="blog-box__author" href="#">By Admin</a>
-            <a class="blog-box__date" href="#">January, 2020</a>
+            <div class="blog-box__date">January, 2020</div>
           </div>
           <a class="blog__item-titlelink" href="#">
             <h4 class="blog__item-title">
