--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,9 @@
         <img class="logo__img" src="images/logo.png" alt="logo" />
       </a>
       <nav class="menu">
+        <button class="menu__btn">
+          <span></span>
+        </button>
         <ul class="menu__list">
           <li class="menu__list-item ">
             <a class="menu__list-link menu__list-link--active" href="#"> Home </a>
@@ -265,7 +268,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> 
 
     <section class="product">
   <div class="container">
@@ -632,7 +635,7 @@
         <div class="blog__item-box">
           <div class="blog-box">
             <a class="blog-box__author" href="#">By Admin</a>
-            <a class="blog-box__date" href="#">January, 2020</a>
+            <div class="blog-box__date">January, 2020</div>
           </div>
           <a class="blog__item-titlelink" href="#">
             <h4 class="blog__item-title">
@@ -651,7 +654,7 @@
         <div class="blog__item-box">
           <div class="blog-box">
             <a class="blog-box__author" href="#">By Admin</a>
-            <a class="blog-box__date" href="#">January, 2020</a>
+            <div class="blog-box__date">January, 2020</div>
           </div>
           <a class="blog__item-titlelink" href="#">
             <h4 class="blog__item-title">
@@ -670,7 +673,7 @@
         <div class="blog__item-box">
           <div class="blog-box">
             <a class="blog-box__author" href="#">By Admin</a>
-            <a class="blog-box__date" href="#">January, 2020</a>
+            <div class="blog-box__date">January, 2020</div>
           </div>
           <a class="blog__item-titlelink" href="#">
             <h4 class="blog__item-title">
