change design our site

--- a/app/404-page.html
+++ b/app/404-page.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Noros</title>
   <link rel="stylesheet" href="css/404-page.min.css" />
   <link rel="stylesheet" href="css/style.min.css" />
 </head>
@@ -14,7 +14,7 @@
   <header class="header">
   <div class="container">
     <div class="header__inner">
-      <a class="logo" href="#">
+      <a class="logo" href="index.html">
         <img class="logo__img" src="images/logo.png" alt="logo" />
       </a>
       <nav class="menu">
@@ -23,19 +23,19 @@
         </button>
         <ul class="menu__list">
           <li class="menu__list-item ">
-            <a class="menu__list-link menu__list-link--active" href="#"> Home </a>
+            <a class="menu__list-link menu__list-link--active" href="index.html"> Home </a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#"> shop </a>
+            <a class="menu__list-link" href="shop.html"> shop </a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#"> page </a>
+            <a class="menu__list-link" href="login.html"> page </a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#"> blog </a>
+            <a class="menu__list-link" href="blog.html"> blog </a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#"> contact </a>
+            <a class="menu__list-link" href="contacts.html"> contact </a>
           </li>
         </ul>
       </nav>
@@ -73,7 +73,7 @@
                 We,re sorry but we can’t seem to find the pages you request. This might be because you have typed the web address not
                 find incorrectly.
               </p>
-              <a class="page-404__link" href="#">BACK TO HOME</a>
+              <a class="page-404__link" href="index.html">BACK TO HOME</a>
             </div>
             <img class="page-404__img" src="images/404.png" alt="404 images">
           </div>
@@ -89,14 +89,14 @@
           <img class="logo__img" src="images/logo.png" alt="logo" />
         </a>
         <a class="footer-top__address" href="#">
-          No. 342 - London Oxford Street,
-          012 United States
+          No. 250 - Washington Street,
+          018 United States
         </a>
-        <a class="footer-top__email" href="mailto:Youremail@gmail.com">
-          Youremail@gmail.com
+        <a class="footer-top__email" href="mailto:Norosfashemail@gmail.com">
+          Norosfashemail@gmail.com
         </a>
-        <a class="footer-top__phone" href="tel:+02838388393">
-          +0283 838 8393
+        <a class="footer-top__phone" href="tel:+12458698376">
+          +1 245 869 8376
         </a>
         <ul class="footer-top__social-list">
           <li class="footer-top__social-item">
@@ -177,7 +177,7 @@
             </a>
           </li>
           <li class="footer-top__item">
-            <a class="footer-top__link" href="#">
+            <a class="footer-top__link" href="contacts.html">
               Contact Us
             </a>
           </li>
@@ -225,9 +225,8 @@
           Subscribe Our Newsletter
         </h6>
         <p class="footer-top__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore magna
-          aliqua. Quis ipsum suspendisse ultrices gravida.
+          Do you want to be the first to know the latest news from the fashion world? Then subscribe to our newsletter
+          and visit us on Facebook for more fashion ideas.
         </p>
         <form class="footer-top__form" action="#">
           <input class="footer-top__form-input" type="email" placeholder="Your email address" required>
@@ -237,7 +236,7 @@
     </div>
     <div class="footer-bottom">
       <p class="footer-bottom__copy">
-        © 2019 CodeAstrology. All Rights Reserved.
+        © 2023 CodeAstrology. All Rights Reserved.
       </p>
       <div class="footer-bottom__accept">
         We Accept
