--- a/app/contacts.html
+++ b/app/contacts.html
@@ -5,16 +5,17 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Noros</title>
   <link rel="stylesheet" href="css/contacts.min.css" />
   <link rel="stylesheet" href="css/style.min.css" />
 </head>
 
 <body>
- <header class="header">
+ 
+<header class="header">
   <div class="container">
     <div class="header__inner">
-      <a class="logo" href="#">
+      <a class="logo" href="index.html">
         <img class="logo__img" src="images/logo.png" alt="logo" />
       </a>
       <nav class="menu">
@@ -23,19 +24,19 @@
         </button>
         <ul class="menu__list">
           <li class="menu__list-item ">
-            <a class="menu__list-link menu__list-link--active" href="#"> Home </a>
+            <a class="menu__list-link" href="index.html"> Home </a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#"> shop </a>
+            <a class="menu__list-link" href="shop.html"> shop </a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#"> page </a>
+            <a class="menu__list-link" href="login.html"> page </a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#"> blog </a>
+            <a class="menu__list-link" href="blog.html"> blog </a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#"> contact </a>
+            <a class="menu__list-link menu__list-link--active" href="contacts.html"> contact </a>
           </li>
         </ul>
       </nav>
@@ -65,26 +66,27 @@
 
   <main class="main">
       <section class="top">
-  <div class="top__container" style="background-image: url('images/top-bg.jpg');">
-    <div class="container">
-      <h2 class="top__title title">LOG IN</h2>
-      <div class="breadcrumbs">
-        <ul class="breadcrumbs__list">
-          <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link" href="#">
-              Home
-            </a>
-          </li>
-          <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link" href="#">
-              Log in
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
+        <div class="top__container" style="background-image: url('images/top-bg.jpg');">
+          <div class="container">
+            <h2 class="top__title title">CONTACT US</h2>
+            <div class="breadcrumbs">
+              <ul class="breadcrumbs__list">
+                <li class="breadcrumbs__item">
+                  <a class="breadcrumbs__link" href="index.html">
+                    Home
+                  </a>
+                </li>
+                <li class="breadcrumbs__item">
+                  <a class="breadcrumbs__link" href="#">
+                    Contact
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      
 
       <section class="map">
         <div class="container">
@@ -101,25 +103,24 @@
                 Contact With Us
               </h3>
               <p class="contact__info-text">
-                Lorem ipsum dolor sit amet, consectetur adingn elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Quis ipsum suspendisse ultrices gravida. Risus commodo maecnaacnrao cumsan lacus vel facilisis.
+                Have questions about our products, quality of customer service or anything else? Do not be afraid to write to us, we will be happy to answer any of your questions. Our manager is in touch 24/7 and he is always ready to help you
               </p>
               <ul class="contact__info-list">
                 <li class="contact__info-item">
-                  <a class="contact__info-phone" href="tel:+01234567896">
-                    +0-123-456-7896
+                  <a class="contact__info-phone" href="tel:+12458698376">
+                    +1 245 869 8376
                   </a>
-                  <a class="contact__info-phone" href="tel:+01234567896">
-                    +0-123-456-7896
+                  <a class="contact__info-phone" href="tel:+12458698376">
+                    +1 245 869 8376
                   </a>
                 </li>
                 <li class="contact__info-item contact__info-item--location">
-                  Ranlon Market 789 Road, <br>
-                  Market Street, Newyork
+                  Ranlon Market 654 Avenue, <br>
+                  Market Street, NewYork
                 </li>
                 <li class="contact__info-item contact__info-item--email">
-                  <div>yourmailaddress@gmail.com</div>
-                  <div>companymail@gmail.com</div>
+                  <div>NRSroadmarket@gmail.com</div>
+                  <div>Norosfashemail@gmail.com</div>
                 </li>
               </ul>
             </div>
@@ -150,14 +151,14 @@
           <img class="logo__img" src="images/logo.png" alt="logo" />
         </a>
         <a class="footer-top__address" href="#">
-          No. 342 - London Oxford Street,
-          012 United States
+          No. 250 - Washington Street,
+          018 United States
         </a>
-        <a class="footer-top__email" href="mailto:Youremail@gmail.com">
-          Youremail@gmail.com
+        <a class="footer-top__email" href="mailto:Norosfashemail@gmail.com">
+          Norosfashemail@gmail.com
         </a>
-        <a class="footer-top__phone" href="tel:+02838388393">
-          +0283 838 8393
+        <a class="footer-top__phone" href="tel:+12458698376">
+          +1 245 869 8376
         </a>
         <ul class="footer-top__social-list">
           <li class="footer-top__social-item">
@@ -238,7 +239,7 @@
             </a>
           </li>
           <li class="footer-top__item">
-            <a class="footer-top__link" href="#">
+            <a class="footer-top__link" href="contacts.html">
               Contact Us
             </a>
           </li>
@@ -286,9 +287,8 @@
           Subscribe Our Newsletter
         </h6>
         <p class="footer-top__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore magna
-          aliqua. Quis ipsum suspendisse ultrices gravida.
+          Do you want to be the first to know the latest news from the fashion world? Then subscribe to our newsletter
+          and visit us on Facebook for more fashion ideas.
         </p>
         <form class="footer-top__form" action="#">
           <input class="footer-top__form-input" type="email" placeholder="Your email address" required>
@@ -298,7 +298,7 @@
     </div>
     <div class="footer-bottom">
       <p class="footer-bottom__copy">
-        © 2019 CodeAstrology. All Rights Reserved.
+        © 2023 CodeAstrology. All Rights Reserved.
       </p>
       <div class="footer-bottom__accept">
         We Accept
@@ -347,7 +347,7 @@
                       "visibility": "simplified"
                     },
                     {
-                      "color": "#a31645"
+                      "color": "#3ed6fe"
                     }
                   ]
                 },
@@ -362,7 +362,7 @@
                       "visibility": "on"
                     },
                     {
-                      "color": "#ffecf0"
+                      "color": "#3ed6fe"
                     }
                   ]
                 },
@@ -392,7 +392,7 @@
                       "visibility": "simplified"
                     },
                     {
-                      "color": "#a31645"
+                      "color": "#ffffff"
                     }
                   ]
                 },
@@ -428,7 +428,7 @@
                       "visibility": "simplified"
                     },
                     {
-                      "color": "#d89ca8"
+                      "color": "#3ed6fe"
                     }
                   ]
                 },
@@ -458,7 +458,7 @@
                   "elementType": "labels",
                   "stylers": [
                     {
-                      "color": "#a31645"
+                      "color": "#ffffff"
                     }
                   ]
                 },
@@ -518,7 +518,7 @@
                   "elementType": "all",
                   "stylers": [
                     {
-                      "color": "#d89ca8"
+                      "color": "#3ed6fe"
                     },
                     {
                       "visibility": "on"
@@ -533,7 +533,7 @@
                       "visibility": "on"
                     },
                     {
-                      "color": "#fedce3"
+                      "color": "#3ed6fe"
                     }
                   ]
                 },
