--- a/app/module/_blog/_blog.html
+++ b/app/module/_blog/_blog.html
@@ -4,8 +4,7 @@
       From Our Blog
     </h3>
     <p class="text">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodmoe tempor incididunt ut labore et
-      dolore aliqua.
+      If you want to know more about the fashion world, then you should check out our blog page.
     </p>
     <div class="blog__items">
       <div class="blog__item">
@@ -15,11 +14,11 @@
         <div class="blog__item-box">
           <div class="blog-box">
             <a class="blog-box__author" href="#">By Admin</a>
-            <div class="blog-box__date">January, 2020</div>
+            <div class="blog-box__date">December, 2022</div>
           </div>
           <a class="blog__item-titlelink" href="#">
             <h4 class="blog__item-title">
-              Our Apps User Use Mobile On His Mobile
+              What leather handbags are better to take
             </h4>
           </a>
           <a class="blog__item-link" href="#">
@@ -34,11 +33,11 @@
         <div class="blog__item-box">
           <div class="blog-box">
             <a class="blog-box__author" href="#">By Admin</a>
-            <div class="blog-box__date">January, 2020</div>
+            <div class="blog-box__date">January, 2023</div>
           </div>
           <a class="blog__item-titlelink" href="#">
             <h4 class="blog__item-title">
-              Our Apps User Use Mobile On His Mobile
+              What color sweatshirts are the most popular now
             </h4>
           </a>
           <a class="blog__item-link" href="#">
@@ -53,11 +52,11 @@
         <div class="blog__item-box">
           <div class="blog-box">
             <a class="blog-box__author" href="#">By Admin</a>
-            <div class="blog-box__date">January, 2020</div>
+            <div class="blog-box__date">March, 2023</div>
           </div>
           <a class="blog__item-titlelink" href="#">
             <h4 class="blog__item-title">
-              Our Apps User Use Mobile On His Mobile
+              Blouses – the trend of today or a forgotten past
             </h4>
           </a>
           <a class="blog__item-link" href="#">
