--- a/app/module/_footer/_footer.html
+++ b/app/module/_footer/_footer.html
@@ -6,14 +6,14 @@
           <img class="logo__img" src="images/logo.png" alt="logo" />
         </a>
         <a class="footer-top__address" href="#">
-          No. 342 - London Oxford Street,
-          012 United States
+          No. 250 - Washington Street,
+          018 United States
         </a>
-        <a class="footer-top__email" href="mailto:Youremail@gmail.com">
-          Youremail@gmail.com
+        <a class="footer-top__email" href="mailto:Norosfashemail@gmail.com">
+          Norosfashemail@gmail.com
         </a>
-        <a class="footer-top__phone" href="tel:+02838388393">
-          +0283 838 8393
+        <a class="footer-top__phone" href="tel:+12458698376">
+          +1 245 869 8376
         </a>
         <ul class="footer-top__social-list">
           <li class="footer-top__social-item">
@@ -94,7 +94,7 @@
             </a>
           </li>
           <li class="footer-top__item">
-            <a class="footer-top__link" href="#">
+            <a class="footer-top__link" href="contacts.html">
               Contact Us
             </a>
           </li>
@@ -142,9 +142,8 @@
           Subscribe Our Newsletter
         </h6>
         <p class="footer-top__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore magna
-          aliqua. Quis ipsum suspendisse ultrices gravida.
+          Do you want to be the first to know the latest news from the fashion world? Then subscribe to our newsletter
+          and visit us on Facebook for more fashion ideas.
         </p>
         <form class="footer-top__form" action="#">
           <input class="footer-top__form-input" type="email" placeholder="Your email address" required>
@@ -154,7 +153,7 @@
     </div>
     <div class="footer-bottom">
       <p class="footer-bottom__copy">
-        © 2019 CodeAstrology. All Rights Reserved.
+        © 2023 CodeAstrology. All Rights Reserved.
       </p>
       <div class="footer-bottom__accept">
         We Accept
