--- a/app/module/_product/_product.html
+++ b/app/module/_product/_product.html
@@ -4,8 +4,7 @@
       TRENDING PRODUCTS
     </h3>
     <p class="text">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodmoe tempor incididunt ut labore et
-      dolore aliqua.
+      Keep up with the latest trends! We showcase fashionable looks that are among the latest trends.
     </p>
     <div class="product__items">
 
@@ -13,7 +12,7 @@
         <div class="product-item__img-box">
           <img class="product-item__images" src="images/product/1.jpg" alt="product">
           <div class="product-item__link-box">
-            <a class="product-item__link" href="#">
+            <a class="product-item__link" href="404-page.html">
               <svg width="19px" height="20px">
                 <path fill-rule="evenodd" fill="rgb(41, 40, 45)"
                   d="M18.709,18.219 L14.028,13.269 C15.231,11.813 15.891,9.982 15.891,8.075 C15.891,3.622 12.328,-0.002 7.947,-0.002 C3.568,-0.002 0.005,3.622 0.005,8.075 C0.005,12.529 3.568,16.153 7.947,16.153 C9.591,16.153 11.160,15.649 12.498,14.690 L17.216,19.680 C17.414,19.890 17.678,20.004 17.964,20.004 C18.232,20.004 18.486,19.899 18.680,19.710 C19.093,19.307 19.105,18.639 18.709,18.219 L18.709,18.219 ZM7.947,2.106 C11.185,2.106 13.819,4.785 13.819,8.075 C13.819,11.367 11.185,14.046 7.947,14.046 C4.711,14.046 2.078,11.367 2.078,8.075 C2.078,4.785 4.711,2.106 7.947,2.106 L7.947,2.106 Z" />
@@ -37,11 +36,10 @@
           <div class="product-item__box">
             <div class="star" data-rateyo-rating="4"></div>
             <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
+              White Cotton Blouse
             </h4>
             <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+              <div class="product-item__new-price">$30.00</div>
             </div>
           </div>
           <div class="product-item__content-box">
@@ -83,11 +81,11 @@
           <div class="product-item__box">
             <div class="star" data-rateyo-rating="4.5"></div>
             <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
+              Basic Pique Sweatshirt
             </h4>
             <div class="product-item__price">
               <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+              <div class="product-item__old-price">$45.00</div>
             </div>
           </div>
           <div class="product-item__content-box">
@@ -129,11 +127,10 @@
           <div class="product-item__box">
             <div class="star" data-rateyo-rating="4.5"></div>
             <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
+              Organic Cotton Sweatshirt
             </h4>
             <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+              <div class="product-item__new-price">$40.00</div>
             </div>
           </div>
           <div class="product-item__content-box">
@@ -175,11 +172,11 @@
           <div class="product-item__box">
             <div class="star" data-rateyo-rating="5"></div>
             <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
+              Oversized cotton coat
             </h4>
             <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+              <div class="product-item__new-price">$57.00</div>
+              <div class="product-item__old-price">$68.00</div>
             </div>
           </div>
           <div class="product-item__content-box">
@@ -221,11 +218,10 @@
           <div class="product-item__box">
             <div class="star" data-rateyo-rating="4"></div>
             <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
+              Pocket Quilted Vest
             </h4>
             <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+              <div class="product-item__new-price">$55.00</div>
             </div>
           </div>
           <div class="product-item__content-box">
@@ -267,11 +263,11 @@
           <div class="product-item__box">
             <div class="star" data-rateyo-rating="4.6"></div>
             <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
+              Modal wrap dress
             </h4>
             <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+              <div class="product-item__new-price">$35.00</div>
+              <div class="product-item__old-price">$48.00</div>
             </div>
           </div>
           <div class="product-item__content-box">
