--- a/app/module/_top-slider/_top-slider.html
+++ b/app/module/_top-slider/_top-slider.html
@@ -8,8 +8,8 @@
             New Brand Collection
           </h3>
           <p class="top-slider__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            et dolore magna aliqua. Ipsum.
+            Reinvent your fashion look from the new collection in NOROS! Beautiful fabrics, fresh colours, the latest
+            trends.
           </p>
           <a class="top-slider__link" href="#">
             BUY NOW
@@ -24,8 +24,8 @@
             New Brand Collection
           </h3>
           <p class="top-slider__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            et dolore magna aliqua. Ipsum.
+            Reinvent your fashion look from the new collection in NOROS! Beautiful fabrics, fresh colours, the latest
+            trends.
           </p>
           <a class="top-slider__link" href="#">
             BUY NOW
@@ -40,8 +40,8 @@
             New Brand Collection
           </h3>
           <p class="top-slider__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            et dolore magna aliqua. Ipsum.
+            Reinvent your fashion look from the new collection in NOROS! Beautiful fabrics, fresh colours, the latest
+            trends.
           </p>
           <a class="top-slider__link" href="#">
             BUY NOW
@@ -56,8 +56,8 @@
             New Brand Collection
           </h3>
           <p class="top-slider__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            et dolore magna aliqua. Ipsum.
+            Reinvent your fashion look from the new collection in NOROS! Beautiful fabrics, fresh colours, the latest
+            trends.
           </p>
           <a class="top-slider__link" href="#">
             BUY NOW
