--- a/app/module/_video-fashion/_video-fashion.html
+++ b/app/module/_video-fashion/_video-fashion.html
@@ -14,13 +14,9 @@
           TRENDING FASHION
         </h3>
         <p class="video-fashion__text">
-          Lorem ipsum dolor sit amet, consectetur apiscing elit, sed do eiusmod temp incididunt ut labore et dolore
-          magna aliqua
-          consectetur adipiscing elit, sedu do eiusmod temp indidunt ut labore et dolore magna aliqua.. Quis ipsum
-          de ultcesm.
-          Risus commodo viverra maecenas.
+          Believe it or not, frigid conditions make for optimal fashion moments. From cozy sweaters to statement coats, not to mention endless ways to accessorize with different types of hats, scarves, and boots. We have selected for you looks that will look fashionable and cute, but at the same time will warm.
         </p>
-        <a class="video-fashion__link" href="#">
+        <a class="video-fashion__link" href="https://www.youtube.com/watch?v=qcc2COM40Pk">
           View Now
         </a>
       </div>
