--- a/app/product.html
+++ b/app/product.html
@@ -5,16 +5,17 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Noros</title>
   <link rel="stylesheet" href="css/product.min.css" />
   <link rel="stylesheet" href="css/style.min.css" />
 </head>
 
 <body>
-  <header class="header">
+  
+<header class="header">
   <div class="container">
     <div class="header__inner">
-      <a class="logo" href="#">
+      <a class="logo" href="index.html">
         <img class="logo__img" src="images/logo.png" alt="logo" />
       </a>
       <nav class="menu">
@@ -23,19 +24,19 @@
         </button>
         <ul class="menu__list">
           <li class="menu__list-item ">
-            <a class="menu__list-link menu__list-link--active" href="#"> Home </a>
+            <a class="menu__list-link" href="index.html"> Home </a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#"> shop </a>
+            <a class="menu__list-link menu__list-link--active" href="shop.html"> shop </a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#"> page </a>
+            <a class="menu__list-link" href="login.html"> page </a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#"> blog </a>
+            <a class="menu__list-link" href="blog.html"> blog </a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#"> contact </a>
+            <a class="menu__list-link" href="contacts.html"> contact </a>
           </li>
         </ul>
       </nav>
@@ -64,28 +65,29 @@
 </header>
 
   <main class="main">
+    
     <section class="top">
-  <div class="top__container" style="background-image: url('images/top-bg.jpg');">
-    <div class="container">
-      <h2 class="top__title title">LOG IN</h2>
-      <div class="breadcrumbs">
-        <ul class="breadcrumbs__list">
-          <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link" href="#">
-              Home
-            </a>
-          </li>
-          <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link" href="#">
-              Log in
-            </a>
-          </li>
-        </ul>
+      <div class="top__container" style="background-image: url('images/top-bg.jpg');">
+        <div class="container">
+          <h2 class="top__title title">SHOP PAGE</h2>
+          <div class="breadcrumbs">
+            <ul class="breadcrumbs__list">
+              <li class="breadcrumbs__item">
+                <a class="breadcrumbs__link" href="index.html">
+                  Home
+                </a>
+              </li>
+              <li class="breadcrumbs__item">
+                <a class="breadcrumbs__link" href="shop.html">
+                  Shop page
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</section>
-
+    </section>
+    
     <section class="product-page">
       <div class="container">
         <div class="product-one">
@@ -96,53 +98,48 @@
                   <img src="images/product/item/1.jpg" alt="product image">
                 </div>
                 <div class="product-slide__thumb-item">
-                  <img src="images/product/item/1.jpg" alt="product image">
+                  <img src="images/product/item/2.jpg" alt="product image">
                 </div>
                 <div class="product-slide__thumb-item">
-                  <img src="images/product/item/1.jpg" alt="product image">
+                  <img src="images/product/item/3.jpg" alt="product image">
                 </div>
                 <div class="product-slide__thumb-item">
-                  <img src="images/product/item/1.jpg" alt="product image">
+                  <img src="images/product/item/4.jpg" alt="product image">
                 </div>
               </div>
               <div class="product-slide__big">
                 <div class="product-slide__big-item">
-                  <img src="images/product/item/1.jpg" alt="product image">
+                  <img src="images/product/item/9.jpg" alt="product image">
                 </div>
                 <div class="product-slide__big-item">
-                  <img src="images/product/item/1.jpg" alt="product image">
+                  <img src="images/product/item/9.jpg" alt="product image">
                 </div>
                 <div class="product-slide__big-item">
-                  <img src="images/product/item/1.jpg" alt="product image">
+                  <img src="images/product/item/9.jpg" alt="product image">
                 </div>
                 <div class="product-slide__big-item">
-                  <img src="images/product/item/1.jpg" alt="product image">
+                  <img src="images/product/item/9.jpg" alt="product image">
                 </div>
               </div>
             </div>
             <div class="product-one__content">
               <h2 class="product-one__title">
-                Emboossed Packet Backpack
+                Knitted long dress
               </h2>
               <div class="product-one__box">
                 <div class="product-one__price">
                   <div class="product-one__price-new">
-                    $19.00
-                  </div>
-                  <div class="product-one__price-old">
-                    (29.00)
+                    $36.00
                   </div>
                 </div>
                 <div class="product-one__item-star">
-                  <div class="star" data-rateyo-rating="4"></div>
+                  <div class="star" data-rateyo-rating="4.4"></div>
                   <span>(22)</span>
                 </div>
               </div>
               <p class="product-one__item-text">
                 <span>Review:</span>
-                Lorem ipsum dolor sit amet, consectetur adipscg elit, sed do eiusmod tempor incididunt ut laborea et
-                dolore magna alqua.
-                Quis ipsum suspendssem moa ultrices gravida.
+                Knitted fabric. Long design. Tailored dress. Elasticated waist. Closed. Long sleeve. V- Neck. Co-ord.
               </p>
               <form class="product-one__item-form product-filter" action="#">
                 <div class="product-filter__color">
@@ -299,10 +296,29 @@
           </div>
           <div class="product-tabs__content">
             <div class="product-tabs__content-item" id="tab-1">
-              content 1
+              <p class="product-tabs__content-text">
+                64% Polyester, 30% Viscose, 6% Elastane
+              </p>
+              <p class="product-tabs__content-text">
+                Imported
+              </p>
+              <p class="product-tabs__content-text">
+                Pull On closure
+              </p>
+              <p class="product-tabs__content-text">
+                Made of slight elasticity, soft, skin-friendly, breathable material, making you feel well
+              </p>
             </div>
             <div class="product-tabs__content-item" id="tab-2">
-              content 2
+              <p class="product-tabs__content-text">
+                Basic long pencil dress features with knitted, v-neckline and sleeves for women, nice to show your perfect curve in the crowd.
+              </p>
+              <p class="product-tabs__content-text">
+                Matching it with your high heels, booties, right bag, earrings or other accessories for charming and stylish look.
+              </p>
+              <p class="product-tabs__content-text">
+                The charming dress is suit for casual, daily, night out, evening party, birthday, weekend, gathering, vacation, dating, holiday etc.
+              </p>
             </div>
             <div class="product-tabs__content-item product-tabs__content-item--active" id="tab-3">
               <div class="comments">
@@ -310,18 +326,15 @@
                 <div class="comments__content">
                   <div class="comments__content-top">
                     <p class="comments__content-name">
-                      Michle Jhon
+                      Mary White
                     </p>
                     <p class="comments__content-date">
-                      2 days ago
+                      43 days ago
                     </p>
-                    <div class="star comments__content-star" data-rateyo-rating="4"></div>
+                    <div class="star comments__content-star" data-rateyo-rating="4.3"></div>
                   </div>
                   <p class="comments__content-text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna
-                    aliqua. Qus ipsum speissei ultrices gravida. Risus commodo viverra maeenas accumsan lacus vel
-                    facilisis.
+                    This dress is much higher quality than I had expected! I got many compliments when I wore it out. Super easy to dress this cutie up and down depending on the occasion. The knit is sooo soft and comfy. Very breathable and warm enough for spring/fall without being so warm that you can't wear it mid summer. 
                   </p>
                   <a class="comments__content-reply" href="#">Reply</a>
                 </div>
@@ -331,18 +344,15 @@
                 <div class="comments__content">
                   <div class="comments__content-top">
                     <p class="comments__content-name">
-                      Michle Jhon
+                      Sophia Brown
                     </p>
                     <p class="comments__content-date">
-                      2 days ago
+                      36 days ago
                     </p>
                     <div class="star comments__content-star" data-rateyo-rating="4"></div>
                   </div>
                   <p class="comments__content-text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna
-                    aliqua. Qus ipsum speissei ultrices gravida. Risus commodo viverra maeenas accumsan lacus vel
-                    facilisis.
+                    This dress is a great summer basic. It’s adorable on it’s own and/or with an oversized blouse or jean jacket. The color is very pretty for summer. Honestly, for the price it’s an overall good knitted dress for summer!
                   </p>
                   <a class="comments__content-reply" href="#">Reply</a>
                 </div>
@@ -352,18 +362,15 @@
                 <div class="comments__content">
                   <div class="comments__content-top">
                     <p class="comments__content-name">
-                      Michle Jhon
+                      Rossi Francesca
                     </p>
                     <p class="comments__content-date">
-                      2 days ago
+                      20 days ago
                     </p>
-                    <div class="star comments__content-star" data-rateyo-rating="4"></div>
+                    <div class="star comments__content-star" data-rateyo-rating="4.5"></div>
                   </div>
                   <p class="comments__content-text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna
-                    aliqua. Qus ipsum speissei ultrices gravida. Risus commodo viverra maeenas accumsan lacus vel
-                    facilisis.
+                    You can dress up or down. Looks great with anything. Even a denim jacket or cape with a scarf or jewelry. This is a must have in your collection. Trust me it's worth it
                   </p>
                   <a class="comments__content-reply" href="#">Reply</a>
                 </div>
@@ -531,13 +538,13 @@
             </div>
             <div class="product-item__wrapper-box">
               <div class="product-item__box">
-                <div class="star" data-rateyo-rating="4"></div>
+                <div class="star" data-rateyo-rating="4.6"></div>
                 <h4 class="product-item__title">
-                  White Polo Men’s T-Shirt
+                  Modal wrap dress
                 </h4>
                 <div class="product-item__price">
-                  <div class="product-item__new-price">$34.00</div>
-                  <div class="product-item__old-price">$27.00</div>
+                  <div class="product-item__new-price">$35.00</div>
+                  <div class="product-item__old-price">$48.00</div>
                 </div>
               </div>
             </div>
@@ -550,11 +557,10 @@
               <div class="product-item__box">
                 <div class="star" data-rateyo-rating="4"></div>
                 <h4 class="product-item__title">
-                  White Polo Men’s T-Shirt
+                  White Cotton Blouse
                 </h4>
                 <div class="product-item__price">
-                  <div class="product-item__new-price">$34.00</div>
-                  <div class="product-item__old-price">$27.00</div>
+                  <div class="product-item__new-price">$30.00</div>
                 </div>
               </div>
             </div>
@@ -565,13 +571,13 @@
             </div>
             <div class="product-item__wrapper-box">
               <div class="product-item__box">
-                <div class="star" data-rateyo-rating="4"></div>
+                <div class="star" data-rateyo-rating="4.5"></div>
                 <h4 class="product-item__title">
-                  White Polo Men’s T-Shirt
+                  Basic Pique Sweatshirt
                 </h4>
                 <div class="product-item__price">
                   <div class="product-item__new-price">$34.00</div>
-                  <div class="product-item__old-price">$27.00</div>
+                  <div class="product-item__old-price">$45.00</div>
                 </div>
               </div>
             </div>
@@ -582,13 +588,12 @@
             </div>
             <div class="product-item__wrapper-box">
               <div class="product-item__box">
-                <div class="star" data-rateyo-rating="4"></div>
+                <div class="star" data-rateyo-rating="4.5"></div>
                 <h4 class="product-item__title">
-                  White Polo Men’s T-Shirt
+                  Organic Cotton Sweatshirt
                 </h4>
                 <div class="product-item__price">
-                  <div class="product-item__new-price">$34.00</div>
-                  <div class="product-item__old-price">$27.00</div>
+                  <div class="product-item__new-price">$40.00</div>
                 </div>
               </div>
             </div>
@@ -607,14 +612,14 @@
           <img class="logo__img" src="images/logo.png" alt="logo" />
         </a>
         <a class="footer-top__address" href="#">
-          No. 342 - London Oxford Street,
-          012 United States
+          No. 250 - Washington Street,
+          018 United States
         </a>
-        <a class="footer-top__email" href="mailto:Youremail@gmail.com">
-          Youremail@gmail.com
+        <a class="footer-top__email" href="mailto:Norosfashemail@gmail.com">
+          Norosfashemail@gmail.com
         </a>
-        <a class="footer-top__phone" href="tel:+02838388393">
-          +0283 838 8393
+        <a class="footer-top__phone" href="tel:+12458698376">
+          +1 245 869 8376
         </a>
         <ul class="footer-top__social-list">
           <li class="footer-top__social-item">
@@ -695,7 +700,7 @@
             </a>
           </li>
           <li class="footer-top__item">
-            <a class="footer-top__link" href="#">
+            <a class="footer-top__link" href="contacts.html">
               Contact Us
             </a>
           </li>
@@ -743,9 +748,8 @@
           Subscribe Our Newsletter
         </h6>
         <p class="footer-top__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore magna
-          aliqua. Quis ipsum suspendisse ultrices gravida.
+          Do you want to be the first to know the latest news from the fashion world? Then subscribe to our newsletter
+          and visit us on Facebook for more fashion ideas.
         </p>
         <form class="footer-top__form" action="#">
           <input class="footer-top__form-input" type="email" placeholder="Your email address" required>
@@ -755,7 +759,7 @@
     </div>
     <div class="footer-bottom">
       <p class="footer-bottom__copy">
-        © 2019 CodeAstrology. All Rights Reserved.
+        © 2023 CodeAstrology. All Rights Reserved.
       </p>
       <div class="footer-bottom__accept">
         We Accept
