--- a/app/register.html
+++ b/app/register.html
@@ -5,15 +5,16 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Noros</title>
   <link rel="stylesheet" href="css/login.min.css" />
 </head>
 
 <body>
-  <header class="header">
+  
+<header class="header">
   <div class="container">
     <div class="header__inner">
-      <a class="logo" href="#">
+      <a class="logo" href="index.html">
         <img class="logo__img" src="images/logo.png" alt="logo" />
       </a>
       <nav class="menu">
@@ -22,19 +23,19 @@
         </button>
         <ul class="menu__list">
           <li class="menu__list-item ">
-            <a class="menu__list-link menu__list-link--active" href="#"> Home </a>
+            <a class="menu__list-link" href="index.html"> Home </a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#"> shop </a>
+            <a class="menu__list-link" href="shop.html"> shop </a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#"> page </a>
+            <a class="menu__list-link menu__list-link--active" href="login.html"> page </a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#"> blog </a>
+            <a class="menu__list-link" href="blog.html"> blog </a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#"> contact </a>
+            <a class="menu__list-link" href="contacts.html"> contact </a>
           </li>
         </ul>
       </nav>
@@ -64,32 +65,32 @@
 
   <main class="main">
       <section class="top">
-  <div class="top__container" style="background-image: url('images/top-bg.jpg');">
-    <div class="container">
-      <h2 class="top__title title">LOG IN</h2>
-      <div class="breadcrumbs">
-        <ul class="breadcrumbs__list">
-          <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link" href="#">
-              Home
-            </a>
-          </li>
-          <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link" href="#">
-              Log in
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
+        <div class="top__container" style="background-image: url('images/top-bg.jpg');">
+          <div class="container">
+            <h2 class="top__title title">REGISTER</h2>
+            <div class="breadcrumbs">
+              <ul class="breadcrumbs__list">
+                <li class="breadcrumbs__item">
+                  <a class="breadcrumbs__link" href="index.html">
+                    Home
+                  </a>
+                </li>
+                <li class="breadcrumbs__item">
+                  <a class="breadcrumbs__link" href="#">
+                    Register
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <section class="modal">
         <div class="container">
           <div class="modal__links">
-            <a class="modal__link modal__link--active" href="">REGISTER</a>
-            <a class="modal__link" href="">LOGIN</a>
+            <a class="modal__link modal__link--active" href="register.html">REGISTER</a>
+            <a class="modal__link" href="login.html">LOGIN</a>
           </div>
           <form class="modal__form" action="#">
             <label class="modal__label">
@@ -125,14 +126,14 @@
           <img class="logo__img" src="images/logo.png" alt="logo" />
         </a>
         <a class="footer-top__address" href="#">
-          No. 342 - London Oxford Street,
-          012 United States
+          No. 250 - Washington Street,
+          018 United States
         </a>
-        <a class="footer-top__email" href="mailto:Youremail@gmail.com">
-          Youremail@gmail.com
+        <a class="footer-top__email" href="mailto:Norosfashemail@gmail.com">
+          Norosfashemail@gmail.com
         </a>
-        <a class="footer-top__phone" href="tel:+02838388393">
-          +0283 838 8393
+        <a class="footer-top__phone" href="tel:+12458698376">
+          +1 245 869 8376
         </a>
         <ul class="footer-top__social-list">
           <li class="footer-top__social-item">
@@ -213,7 +214,7 @@
             </a>
           </li>
           <li class="footer-top__item">
-            <a class="footer-top__link" href="#">
+            <a class="footer-top__link" href="contacts.html">
               Contact Us
             </a>
           </li>
@@ -261,9 +262,8 @@
           Subscribe Our Newsletter
         </h6>
         <p class="footer-top__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore magna
-          aliqua. Quis ipsum suspendisse ultrices gravida.
+          Do you want to be the first to know the latest news from the fashion world? Then subscribe to our newsletter
+          and visit us on Facebook for more fashion ideas.
         </p>
         <form class="footer-top__form" action="#">
           <input class="footer-top__form-input" type="email" placeholder="Your email address" required>
@@ -273,7 +273,7 @@
     </div>
     <div class="footer-bottom">
       <p class="footer-bottom__copy">
-        © 2019 CodeAstrology. All Rights Reserved.
+        © 2023 CodeAstrology. All Rights Reserved.
       </p>
       <div class="footer-bottom__accept">
         We Accept
